kubernetes/apps/observability/kromgo/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kromgo
  annotations:
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "kromgo.${SECRET_DOMAIN_2}"
      secretName: "kromgo.${SECRET_DOMAIN_2//./-}-prod-tls"
  rules:
    - host: kromgo.${SECRET_DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kromgo
                port:
                  number: 80
